# GrassSimulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main
lib/soil/: CMakeCache.txt  Makefile  cmake_install.cmake
shaders/: grass.frag  grass.vert  ground.vert
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader_utils.cpp  shader_utils.h
src/glad/: glad.c  glad.h
